rectified false positive and false negative rates calculations

--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -30,7 +30,7 @@ vec_explanatory_variables = c("E", "G", "E_and_G")
 logistic_y_bin_threshold = 0.2 ### 20% resistance
 
 for (herbi in vec_names_herbicides) {
-    # herbi = vec_names_herbicides[9]
+    # herbi = vec_names_herbicides[1]
     print("########################")
     print(herbi)
     df_phenotype = LOAD_PHENOTYPES(fname_phenotype=fname_phenotype, batch="all", phenotype_names=herbi)
@@ -121,8 +121,8 @@ for (herbi in vec_names_herbicides) {
                 idx_pred_negative = y_pred == 0.00
                 true_positive_rate_power = mean(y_true[idx_true_positive] == y_pred[idx_true_positive])
                 true_negative_rate_selectivity = mean(y_true[idx_true_negative] == y_pred[idx_true_negative])
-                false_positive_rate_fallout = sum(y_pred[idx_pred_positive] != y_pred[idx_pred_positive]) / sum(idx_true_negative)
-                false_negative_rate_missrate = sum(y_pred[idx_pred_negative] != y_pred[idx_pred_negative]) / sum(idx_true_positive)
+                false_positive_rate_fallout = sum(y_pred[idx_pred_positive] != y_true[idx_pred_positive]) / sum(idx_true_negative)
+                false_negative_rate_missrate = sum(y_pred[idx_pred_negative] != y_true[idx_pred_negative]) / sum(idx_true_positive)
                 concordance = mean(y_true == y_pred)
             }
             ### Plot
