--- a/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
+++ b/exploratory/src/1.6_genome_environment_phenotype_to_phenotype.md
@@ -180,6 +180,9 @@ for (herbi in vec_names_herbicides) {
 ![bayesa-Glyphosate](../res/genomic_prediction-bayesa-Glyphosate.svg)
 ![bayesb-Glyphosate](../res/genomic_prediction-bayesb-Glyphosate.svg)
 ![bayesc-Glyphosate](../res/genomic_prediction-bayesc-Glyphosate.svg)
+![ridge-Glyphosate](../res/genomic_prediction-logistic_ridge-Glyphosate.svg)
+![lasso-Glyphosate](../res/genomic_prediction-logistic_lasso-Glyphosate.svg)
+![elastic-Glyphosate](../res/genomic_prediction-logistic_elastic-Glyphosate.svg)
 
 ![ols-Clethodim](../res/genomic_prediction-ols-Clethodim.svg)
 ![ridge-Clethodim](../res/genomic_prediction-ridge-Clethodim.svg)
